--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="88dp"
         android:text="HOME"
-        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="@+id/btnabout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnabout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
@@ -34,8 +34,8 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="10dp"
         android:text="BLOG"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toStartOf="@+id/btnabout"
+        app:layout_constraintTop_toBottomOf="@+id/btnabout" />
 
     <Button
         android:id="@+id/button4"
